--- a/markdown/output.report.Rmd
+++ b/markdown/output.report.Rmd
@@ -10,6 +10,11 @@ output:
 
 ***
 ```{r echo=F}
-output.INFOS
+copy(INFOS) %>%
+    extract(
+      j = TIME := time.numeric.to.posixct(TIME)
+    ) %>%
+    htmlTable(css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
+              rnames = F)
 ```
 
