--- a/markdown/output.report.Rmd
+++ b/markdown/output.report.Rmd
@@ -44,37 +44,15 @@ TIMESERIE.ACCOUNT %>%
 ```
 
 ```{r echo=F, fig.align='center', fig.width=10, message=FALSE, warning=FALSE}
-x <- melt(SYMBOLS.PROFIT_VOLUME, c('TIME', 'SYMBOL'))
-print(x)
-ggplot(x) +
+lables <- c(BALANCE.DELTA = 'PROFIT', NET.VOLUME = 'VOLUME')
+melt(SYMBOLS.PROFIT_VOLUME, c('TIME', 'SYMBOL')) %>% {
+  ggplot(.) +
   geom_line(aes(x = TIME, y = value, color = SYMBOL)) +
-      facet_grid(variable ~ ., scales = 'free_y')
-# SYMBOLS.PROFIT_VOLUME %>%
-#   melt(c('TIME', 'SYMBOL')) %>% {
-#     ggplot(.) +
-#       geom_line(aes(x = TIME, y = value, color = SYMBOL), data = .[value == 'BALANCE.DELTA']) +
-#       # geom_bar(stat='identity', aes(x = TIME, y = value, color = SYMBOL)) +
-#       facet_grid(variable ~ ., scales = 'free_y')
-#   }
-
-# SYMBOLS.PROFIT %>% {
-#   ggplot(.) +
-#     geom_line(aes(x = TIME, y = BALANCE.DELTA, color = SYMBOL)) +
-#     xlab(NULL) +
-#     ylab(NULL) +
-#     theme(legend.position = 'none', axis.ticks.x = element_blank()) +
-#     scale_y_continuous(labels = scales::dollar)
-# }
-  
-# TIMESERIE.SYMBOLS %>%
-#   extract(j = .(TIME = time.numeric.to.posixct(TIME), EQUITY = EQUITY, MARGIN.FREE = MARGIN.FREE, MARGIN.USED = MARGIN.USED)) %>%
-#   melt('TIME')
-# ggplot(timeserie.account) +
-#   geom_line(aes(x = TIME, y = value, color = variable)) +
-#   facet_grid(variable ~ ., scales = 'free_y') +
-#   xlab(NULL) +
-#   ylab(NULL) +
-#   theme(legend.position = 'none', axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
-#   scale_y_continuous(labels = scales::dollar)
+  facet_grid(variable ~ ., scales = 'free_y', labeller = labeller(variable = lables)) +
+  xlab(NULL) +
+  ylab(NULL) +
+  theme(legend.position = 'bottom', legend.direction = 'horizontal', legend.key.size = unit(8, 'pt'),
+        legend.title = element_blank(), panel.background = element_blank())
+}
 ```
 
