--- a/markdown/output.report.Rmd
+++ b/markdown/output.report.Rmd
@@ -138,7 +138,7 @@ mddp.calendar(TIMESERIE.ACCOUNT)%>%
 ***
 ```{r Portfolio Report, echo=F}
 STATISTIC.ACCOUNT.PL %>%
-  setnames(c('', 'N', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX', 'MEAN')) %>%
+  setnames(c('P/L', 'N', 'SUM($)', 'MEAN($)', 'MAX($)', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX($)', 'MEAN($)')) %>%
   htmlTable(rnames = F,
             caption = 'PROFIT vs LOSS',
             css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
@@ -154,20 +154,21 @@ STATISTIC.ACCOUNT.PL %>%
 
 
 ```{r Symbol Report, echo=F}
-if (length(unique(TICKETS.EDITED[, SYMBOL])) > 1) {
-  symbols <- unique(STATISTIC.SYMBOLS.PL[, SYMBOL])
+symbols <- unique(STATISTIC.SYMBOLS.PL[, SYMBOL])
+n.symbols <- length(symbols)
+if (n.symbols > 1) {
   tagList(
     tags$h2('Symbol Report'),
     tags$hr(),
     STATISTIC.SYMBOLS.PL %>%
       extract(j = !c(1)) %>%
-      setnames(c('', 'N', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX', 'MEAN')) %>%
+      setnames(c('P/L', 'N', 'SUM($)', 'MEAN($)', 'MAX($)', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX($)', 'MEAN($)')) %>%
       htmlTable(rnames = F,
                 caption = 'PROFIT vs LOSS',
                 css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
                 css.cell = rep('width: 75px;', 16),
                 rgroup = symbols,
-                n.rgroup = rep(2, length(symbols)),
+                n.rgroup = rep(3, n.symbols),
                 cgroup = c('', '', 'MONEY', 'PIP', 'VOLUME', 'CONTINUOUS'),
                 n.cgroup = c(1, 1, 3, 3, 4, 4),
                 col.rgroup = c("none", "#F9FAF0"),
