--- a/markdown/output.report.Rmd
+++ b/markdown/output.report.Rmd
@@ -19,7 +19,7 @@ body, td {
 </style>
 
 ***
-```{r echo=F}
+```{r infos, echo=F}
 # attach(REPORT)
 copy(INFOS) %>%
   extract(
@@ -33,7 +33,7 @@ copy(INFOS) %>%
             col.columns = c("none", "#F1F0FA"))
 ```
 
-```{r echo=F, fig.align='center', fig.width=13, message=FALSE, warning=FALSE}
+```{r timeseries, echo=F, fig.align='center', fig.width=13, message=FALSE, warning=FALSE}
 TIMESERIE.ACCOUNT %>%
   extract(j = .(TIME, EQUITY, MARGIN.FREE, MARGIN.USED)) %>%
   melt('TIME') %>% {
@@ -47,7 +47,7 @@ TIMESERIE.ACCOUNT %>%
   }
 ```
 
-```{r echo=F}
+```{r period, echo=F}
 with(PERIOD, {
   data.table(
     START = int_start(NATURE.INTERVAL),
@@ -63,7 +63,7 @@ with(PERIOD, {
             col.columns = c("none", "#F1F0FA"))
 ```
 
-```{r echo=F, fig.align='center', fig.width=13, message=FALSE, warning=FALSE}
+```{r profit & volume, echo=F, fig.align='center', fig.width=13, message=FALSE, warning=FALSE}
 lables <- c(BALANCE.DELTA = 'PROFIT', NET.VOLUME = 'VOLUME')
 melt(SYMBOLS.PROFIT_VOLUME, c('TIME', 'SYMBOL')) %>% {
   ggplot(.) +
@@ -71,14 +71,14 @@ melt(SYMBOLS.PROFIT_VOLUME, c('TIME', 'SYMBOL')) %>% {
   facet_grid(variable ~ ., scales = 'free_y', labeller = labeller(variable = lables)) +
   xlab('PROFIT & VOLUME') +
   ylab(NULL) +
-  theme(legend.position = 'bottom', legend.direction = 'horizontal', legend.key.size = unit(8, 'pt'),
+  theme(legend.position = 'bottom', legend.direction = 'horizontal', legend.key.size = unit(10, 'pt'),
         legend.title = element_blank(), panel.background = element_blank())
 }
 ```
   
 ## Calendar
 ***
-```{r echo=F}
+```{r yield & mddp calendar, echo=F}
 yield.calendar(TIMESERIE.ACCOUNT)%>%
   htmlTable(rnames = F,
             caption = 'YIELD CALENDAR',
@@ -94,51 +94,85 @@ mddp.calendar(TIMESERIE.ACCOUNT)%>%
             col.rgroup = c("none", "#F9FAF0"),
             col.columns = c("none", "#F1F0FA"))
 ```
+  
+## Evalution
+***
+```{r evaluation, echo=F}
+net.profit <- STATISTIC.ACCOUNT.PL[PL == 'TOTAL', SUM]
+con.monthly.loss <-
+  TIMESERIE.ACCOUNT %>%
+  setkey(TIME) %>%
+  extract(
+    j = .(TIME, BALANCE.DELTA, YM = format(TIME, '%Y%m'))
+  ) %>%
+  extract(
+    j = .(M.PROFIT = sum(diff(BALANCE.DELTA))),
+    by = YM
+  ) %>%
+  extract(j = M.PROFIT) %>% cal.continuous %>% {
+    if (length(.$DN.TO)) {
+      (.$DN.TO - .$DN.FROM + 1) %>% max
+    } else {
+      0
+    }
+  }
+trades.per.day <- STATISTIC.ACCOUNT.OTHERS[ITEM == 'TRADE', DAILY]
+mdd.portfolio <- STATISTIC.ACCOUNT.OTHERS[MDD == 'MDDP', MDD.VALUE]
+win.percent <-
+  STATISTIC.ACCOUNT.PL[, SUM] %>% {
+  (.)[1] / (.)[3] * 100
+  } %>% round(2)
+threshold <- c(0, 2, 1, 30, 50)
+result.char <- c('FAIL', 'OK')
+data.table(
+  THEME = c('Net Profit',
+            'Monthly Yield',
+            'Trades per Day',
+            'Max Drawdown Percent',
+            'Win Percent'),
+  DESCRIPTION = c(sprintf(' greater than %.2f $', threshold[1]),
+                  sprintf(' no more than %i Loss in a row', threshold[2]),
+                  sprintf(' greater than %.2f trades per day', threshold[3]),
+                  sprintf(' less than %.2f %%', threshold[4]),
+                  sprintf(' greater than %.2f %%', threshold[5])),
+  RESULT = c(sprintf('%.2f $', net.profit),
+             sprintf('max %i', con.monthly.loss),
+             sprintf('%.2f', trades.per.day),
+             sprintf('%.2f %%', mdd.portfolio),
+             sprintf('%.2f %%', win.percent)),
+  EVALUATION = result.char[c(net.profit > threshold[1],
+                             con.monthly.loss <= threshold[2],
+                             trades.per.day > threshold[3],
+                             mdd.portfolio < threshold[4],
+                             win.percent > threshold[5]) + 1]
+) %>%
+  htmlTable(rnames = F,
+            caption = 'EVALUATION',
+            css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
+            css.cell = rep('width: 300px;', 4),
+            col.rgroup = c("none", "#F9FAF0"),
+            col.columns = c("none", "#F1F0FA"))
+```
+  
+## Scores
+***
+```{r scores, echo=F}
 
-
-```{r echo=F}
-# net.profit <-
-# con.monthly.loss <-
-# trades.per.day
-# mdd.portfolio
-# win.percent
-# threshold <- c(0, 2, 1, 30, 50)
-# result.char <- c('FAIL', 'OK')
-# data.table(
-#   THEME = c('Net Profit',
-#             'Monthly Yield',
-#             'Trades per Day',
-#             'Max Drawdown Percent',
-#             'Win Percent'),
-#   DESCRIPTION = c(sprintf(' greater than %.2f $', threshold[1]),
-#                   sprintf(' no more than %i Loss in a row', threshold[2]),
-#                   sprintf(' greater than %.2f trades per day', threshold[3]),
-#                   sprintf(' less than %.2f %%', threshold[4]),
-#                   sprintf(' greater than %.2f %%', threshold[5])),
-#   RESULT = c(sprintf('%.2f $', net.profit),
-#              sprintf('max %i', con.monthly.loss),
-#              sprintf('%.2f', trades.per.day),
-#              sprintf('%.2f %%', mdd.portfolio),
-#              sprintf('%.2f %%', win.percent)),
-#   EVALUATION = result.char[c(net.profit > threshold[1],
-#                              con.monthly.loss <= threshold[2],
-#                              trades.per.day > threshold[3],
-#                              mdd.portfolio < threshold[4],
-#                              win.percent > threshold[5]) + 1]
-# ) %>%
-#   htmlTable(rnames = F,
-#             caption = 'EVALUATION',
-#             css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
-#             css.cell = rep('width: 300px;', 4),
-#             col.rgroup = c("none", "#F9FAF0"),
-#             col.columns = c("none", "#F1F0FA"))
 ```
   
 ## Portfolio Report
 ***
 ```{r Portfolio Report, echo=F}
-STATISTIC.ACCOUNT.PL %>%
+copy(STATISTIC.ACCOUNT.PL) %>%
   setnames(c('P/L', 'N', 'SUM($)', 'MEAN($)', 'MAX($)', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX($)', 'MEAN($)')) %>%
+  extract(
+    j = N := {
+      win.percent <- N[c(TRUE, FALSE, FALSE)] / N[c(FALSE, FALSE, TRUE)] * 100
+      char.n <- as.character(N)
+      char.n[c(TRUE, FALSE, FALSE)] <- sprintf('%s (%.2f%%)', char.n[c(TRUE, FALSE, FALSE)], win.percent)
+      char.n
+    }
+  ) %>%
   htmlTable(rnames = F,
             caption = 'PROFIT vs LOSS',
             css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
@@ -147,7 +181,22 @@ STATISTIC.ACCOUNT.PL %>%
             n.cgroup = c(1, 1, 3, 3, 4, 4),
             col.rgroup = c("none", "#F9FAF0"),
             col.columns = c("none", "#F1F0FA"))
-
+  copy(STATISTIC.ACCOUNT.OTHERS) %>%
+    extract(
+      j = MDD.PERIOD := time.num.to.period.char(MDD.PERIOD)
+    ) %>%
+    htmlTable(rnames = F,
+              caption = 'OTHERS',
+              css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
+              css.cell = rep('width: 64px;', 15),
+              cgroup = c('PROF.YIELD.RETURN', 'EXIT', 'SUMMARY', 'MAX.DRAWDOWN'),
+              n.cgroup = c(6, 4, 2, 3),
+              col.rgroup = c("none", "#F9FAF0"),
+              col.columns = c(rep("none", 6),
+                              rep("#F1F0FA", 4),
+                              rep("none", 2),
+                              rep("#F1F0FA", 3))
+              )
 
 ```
 
@@ -160,9 +209,16 @@ if (n.symbols > 1) {
   tagList(
     tags$h2('Symbol Report'),
     tags$hr(),
-    STATISTIC.SYMBOLS.PL %>%
+    copy(STATISTIC.SYMBOLS.PL) %>%
       extract(j = !c(1)) %>%
       setnames(c('P/L', 'N', 'SUM($)', 'MEAN($)', 'MAX($)', 'SUM', 'MEAN', 'MAX', 'SUM', 'MEAN', 'MAX', 'MIN', 'N.MAX', 'N.MEAN', 'MAX($)', 'MEAN($)')) %>%
+      extract(
+        j = N := {
+        win.percent <- N[c(TRUE, FALSE, FALSE)] / N[c(FALSE, FALSE, TRUE)] * 100
+        char.n <- as.character(N)
+        char.n[c(TRUE, FALSE, FALSE)] <- sprintf('%s (%.2f%%)', char.n[c(TRUE, FALSE, FALSE)], win.percent)
+        char.n
+      }) %>%
       htmlTable(rnames = F,
                 caption = 'PROFIT vs LOSS',
                 css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
@@ -172,8 +228,26 @@ if (n.symbols > 1) {
                 cgroup = c('', '', 'MONEY', 'PIP', 'VOLUME', 'CONTINUOUS'),
                 n.cgroup = c(1, 1, 3, 3, 4, 4),
                 col.rgroup = c("none", "#F9FAF0"),
-                col.columns = c("none", "#F1F0FA"))
-      
+                col.columns = c("none", "#F1F0FA")),
+    copy(STATISTIC.SYMBOLS.OTHERS) %>%
+      extract(j = !c(1)) %>%
+      extract(
+        j = MDD.PERIOD := time.num.to.period.char(MDD.PERIOD)
+      ) %>%
+      htmlTable(rnames = F,
+                caption = 'OTHERS',
+                css.table = "width: 100%; margin-top: 1em; margin-bottom: 1em;",
+                rgroup = symbols,
+                n.rgroup = rep(3, n.symbols),
+                css.cell = rep('width: 64px;', 15),
+                cgroup = c('PROF.YIELD.RETURN', 'EXIT', 'SUMMARY', 'MAX.DRAWDOWN'),
+                n.cgroup = c(6, 4, 2, 3),
+                col.rgroup = c("none", "#F9FAF0"),
+                col.columns = c(rep("none", 6),
+                                rep("#F1F0FA", 4),
+                                rep("none", 2),
+                                rep("#F1F0FA", 3))
+      )
   )
 }
 ```
